<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/Khata_Logo"
        android:layout_marginVertical="30dp"
        android:contentDescription="A Simple Logo"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/opensans_semibold"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter name"
            android:inputType="text"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- Email -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/opensans_semibold"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter email"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

    </LinearLayout>

    <!-- Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/opensans_semibold"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="20sp"
            android:inputType="textPassword"/>

    </LinearLayout>

    <!-- Confirm Password -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Password"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="@font/opensans_semibold"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/confirmPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Re-Type Password"
            android:textSize="20sp"
            android:inputType="textPassword"/>

    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textSize="16dp"
        android:fontFamily="@font/opensans_bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#008CFF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textSize="15sp"
            android:fontFamily="@font/opensans_regular" />

        <TextView
            android:id="@+id/signinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/u_signin"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#4F6367"
            android:fontFamily="@font/opensans_bold"/>

    </LinearLayout>

</LinearLayout>